# luhdc-svn

trunk/: AUTHORS  Doxyfile  Makefile.in  README  configure  configure.in  configure.in.in  khusba.kdevelop  khusba.kdevelop.pcs  svn-commit.tmp
trunk/debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  khusba-default.ex  khusba.doc-base.EX  khusba.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
trunk/debian/khusba/DEBIAN/: conffiles  control  md5sums
trunk/debian/khusba/usr/share/applnk/Utilities/: khusba_pci.desktop
trunk/debian/khusba/usr/share/doc/HTML/en/khusba/: common  index.cache.bz2
trunk/debian/khusba/usr/share/khusba/: khusba_pci.kmdr  usb_analyze.kmdr
trunk/debian/khusba/usr/share/services/: khusba.desktop
trunk/doc/: Makefile.am  Makefile.in
trunk/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/po/: Makefile.in
trunk/src/: Makefile.am  Makefile.in  advisor  guess_x_driver.sh  khpopoup.ui  khpopoup.ui.h  khusba.cpp  khusba.h  khusba.lsm  khusba_info  khusba_instance.desktop  khusba_pci.desktop  khusba_pci_list  khusba_send_pci  khusba_send_usb  khusba_usb.desktop  main.cpp  pci_analyze  syslauncher.cpp  syslauncher.h  traywin.cpp  traywin.h  z99_zkhusba.rules
trunk/templates/: h
